--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,14 +11,10 @@
 
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <link rel="stylesheet" href="/frontend/public/style.css">
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-  crossorigin="anonymous"
-/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
-<link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Hidden Pages</title>
 </head>
 
@@ -28,9 +24,14 @@
 
 
 
-  
+
   <div id="root"></div>
 
+
+
+
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
